# lsh

./: .gitignore  CMakeLists.txt  README.md  build_script.sh  cquery_log.txt
Documentation/: README.md
src/: builtins.c  builtins.h  execution_plan.c  execution_plan.h  executor.c  executor.h  growable_string.c  growable_string.h  hashmap.c  hashmap.h  main.c  parse.c  parse.h  path.c  path.h  shell.c  shell.h  str_vec.c  str_vec.h  util.c  util.h
